# streaming-market-signals

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: daily-pipeline.yml
dags/: financials_dag.py  ingest.py  kworb_spotify_dag.py
data/raw/kworb/: kworb_spotify_global_daily_2025-12-05.parquet  kworb_spotify_global_daily_2025-12-07.parquet  kworb_spotify_global_daily_2025-12-08.parquet  kworb_spotify_global_daily_2025-12-10.parquet  kworb_spotify_global_daily_2025-12-12.parquet  kworb_spotify_global_daily_2025-12-13.parquet  kworb_spotify_global_daily_2025-12-14.parquet  kworb_spotify_global_daily_2025-12-15.parquet  kworb_spotify_global_daily_2025-12-16.parquet  kworb_spotify_global_daily_2025-12-17.parquet  kworb_spotify_global_daily_2025-12-21.parquet  kworb_spotify_global_daily_2025-12-27.parquet  kworb_spotify_global_daily_2025-12-28.parquet  kworb_spotify_global_daily_2025-12-30.parquet  kworb_spotify_global_daily_2026-01-01.parquet  kworb_spotify_global_daily_2026-01-02.parquet  kworb_spotify_global_daily_2026-01-04.parquet  kworb_spotify_global_daily_2026-01-05.parquet  kworb_spotify_global_daily_2026-01-06.parquet  kworb_spotify_global_daily_2026-01-07.parquet  kworb_spotify_global_daily_2026-01-08.parquet  kworb_spotify_global_daily_2026-01-09.parquet  kworb_spotify_global_daily_2026-01-10.parquet  kworb_spotify_global_daily_2026-01-11.parquet  kworb_spotify_global_daily_2026-01-12.parquet  kworb_spotify_global_daily_2026-01-13.parquet  kworb_spotify_global_daily_2026-01-14.parquet  kworb_spotify_global_daily_2026-01-16.parquet  kworb_spotify_global_daily_2026-01-17.parquet  kworb_spotify_global_daily_2026-01-18.parquet  kworb_spotify_global_daily_2026-01-19.parquet  (+155 more)
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/macros/: normalize_label.sql  normalize_text.sql
dbt_project/models/: schema.yml  sources.yml
docker/: Dockerfile.airflow
docs/diagrams/: airflow-dags.mmd  architecture.mmd  dbt-lineage.mmd  ownership-path-example.mmd
notebooks/: market_share_alpha.ipynb
scripts/: build_hierarchy.py  enrich_metadata.py  fetch_financials.py  load_musicbrainz.py  run_pipeline.sh  scrape_kworb.py
(+6 files in other folders)
